@@ -1,5 +1,3 @@
-Test dynamic registration on server side (server_ax_reg, server_ax_unreg)
-
 When server_manager_thread exits, the listener must be aware of this... 
 
 Implement a "test resource manager" can be driven by "open string" with the
